--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.4.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-loading-skeleton": "^3.5.0",
+		"react-redux": "^9.1.2",
 		"react-router": "^7.0.1"
 	},
 	"devDependencies": {
