--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.4.0",
+		"classnames": "^2.5.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-loading-skeleton": "^3.5.0",
+		"react-player": "^2.16.0",
 		"react-redux": "^9.1.2",
 		"react-router": "^7.0.1"
 	},
