--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.13.5",
+		"@emotion/styled": "^11.13.5",
+		"@mui/material": "^5.16.9",
 		"@reduxjs/toolkit": "^2.4.0",
 		"classnames": "^2.5.1",
 		"react": "^18.3.1",
@@ -17,7 +20,8 @@
 		"react-loading-skeleton": "^3.5.0",
 		"react-player": "^2.16.0",
 		"react-redux": "^9.1.2",
-		"react-router": "^7.0.1"
+		"react-router": "^7.0.1",
+		"react-toastify": "^10.0.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
