--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@mui/material": "^5.16.9",
 		"@reduxjs/toolkit": "^2.4.0",
 		"classnames": "^2.5.1",
+		"he": "^1.2.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-loading-skeleton": "^3.5.0",
@@ -25,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
+		"@types/he": "^1.2.3",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.5.0",
